# RubikscubeSolver-C-

./: CMakeLists.txt  main.cpp
PatternDatabases/: CornerDatabaseMaker.cpp  CornerDatabaseMaker.h  CornerPatternDatabase.h  NibbleArray.cpp  NibbleArray.h  PatternDatabase.cpp  PatternDatabase.h  PermutationIndexer.h  math.cpp  math.h
models/: 1DArrayModel.cpp  3DArrayModel.cpp  RubiksCube.cpp  RubiksCube.h  RubiksCubeBitBoard.cpp
solver/: BFSSolver.h  DFSSolver.h  IDAStarSolver.h  IDDFSSolver.h
